k8s/overlays/prod/rollout-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/id377585/agnetz-ia-backend:v0.1.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          command: ["sh", "-c"]
          args:
            - >
              until pg_isready -h postgres -p 5432 -U $POSTGRES_USER; do echo "waiting for db"; sleep 2; done;
              npx prisma migrate deploy;
              npm run seed;
              node dist/server.js
          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  strategy:
    blueGreen:
      activeService: backend
      previewService: backend-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: backend-smoke
