k8s/overlays/prod/rollout-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/id377585/agnetz-ia-frontend:v0.1.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
  strategy:
    blueGreen:
      activeService: frontend
      previewService: frontend-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: frontend-smoke
