k8s/overlays/prod/backend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
