k8s/overlays/prod/frontend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
